[project]
name = "arcus-workspace"
version = "0"
requires-python = ">=3.11"

[tool.uv.workspace]
members = ["packages/*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["packages/provider-runtime/tests"]
markers = [
    "docling: test exercises the Docling backend (opts out of the docling-off fixture)",
]
