[project]
name = "arcus-workspace"
version = "0"
requires-python = ">=3.11"

[tool.uv.workspace]
members = ["packages/*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint.per-file-ignores]
# Vendored from athena (kept byte-compatible with upstream so it can be re-synced
# without merge friction). Don't restyle it — exempt its pre-existing lint.
"**/providers/html/_athena_fetch_page.py" = ["E401", "E701", "E702", "F841"]

[tool.pytest.ini_options]
testpaths = ["packages/provider-runtime/tests"]
markers = [
    "docling: test exercises the Docling backend (opts out of the docling-off fixture)",
]
